# manganize

./: .env.example  .gitignore  .watchfiles.yaml  AGENTS.md  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  langgraph.json  main.py  package-lock.json  pyproject.toml  tailwind.config.js
.claude/docs/: DESIGN.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 1c55dba4dd75_create_generation_history_and_.py  9b1ce8e2f8a2_add_revision_fields_to_generation_.py  c4d1e7b9a2f3_add_upload_sources_and_generation_link.py
apps/web/: README.md  pyproject.toml
apps/web/manganize_web/: config.py  main.py
apps/web/manganize_web/api/: character.py  generation.py  history.py
apps/web/manganize_web/models/: __init__.py  character.py  database.py  generation.py  seed.py  upload_source.py
apps/web/manganize_web/repositories/: __init__.py  base.py  character.py  database_session.py  generation.py  upload_source.py
apps/web/manganize_web/schemas/: character.py  generation.py
apps/web/manganize_web/services/: character.py  generator.py  history.py  storage.py  upload_source.py
apps/web/manganize_web/static/css/: input.css  output.css
apps/web/manganize_web/static/js/: icons.js
apps/web/manganize_web/templates/: character.html  index.html  revision_workspace.html
apps/web/manganize_web/templates/partials/: character_form.html  progress.html  result.html
apps/web/manganize_web/utils/: __init__.py  file_processing.py  filename.py  image_processing.py
characters/gpt/: gpt.yaml
characters/kurage/: kurage.yaml
docs/specs/manga-revision/: design.md  requirements.md  tasks.md
docs/specs/web-app/: design.md  requirements.md  tasks.md
docs/wiki/explanation/: README.md  architecture.md  design-decisions.md  prompt-engineering.md
docs/wiki/how-to/: README.md  add-custom-tool.md  custom-character.md  (+2 more)
manganize/: agents.py  character.py  prompts.py  tools.py
scripts/: seed_characters.py
specs/001-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agentcore-separation/: design.md  research.md  spec.md
web/: __init__.py  config.py  main.py  templates.py
web/api/: character.py  generation.py  history.py
web/models/: __init__.py  character.py  database.py  generation.py  seed.py
web/repositories/: __init__.py  base.py  character.py  database_session.py  generation.py
web/schemas/: character.py  generation.py
web/services/: character.py  generator.py  history.py
web/templates/: base.html  character.html  history.html  index.html
(+18 files in other folders)
