[project]
name = "manganize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.9.1",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.52.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "markitdown[all]>=0.1.0",
    "pillow>=12.0.0",
    "playwright>=1.49.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.44.1",
    "ruff>=0.14.7",
]
