[project]
name = "manganize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "manganize-core",
    "manganize-web"
]

[tool.uv.sources]
manganize-core = { workspace = true }
manganize-web = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.14.7", "ty>=0.0.7"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
